@@ -1694,11 +1694,6 @@ X509_STORE_add_crl(ctx, x)
     X509_STORE *ctx
     X509_CRL *x
 
-void 
-X509_STORE_CTX_set_flags(ctx, flags)
-    X509_STORE_CTX *ctx
-    long flags
-
 #if OPENSSL_VERSION_NUMBER >= 0x0090800fL
 
 void 
@@ -1715,6 +1710,11 @@ void
 X509_STORE_set_trust(ctx, trust)
     X509_STORE *ctx
     int trust
+
+int 
+X509_STORE_set1_param(ctx, pm)
+    X509_STORE *ctx
+    X509_VERIFY_PARAM *pm
 
 #endif
 
@@ -2795,5 +2795,198 @@ const EVP_MD *EVP_sha256()
 #endif
 
 #endif
+
+#if OPENSSL_VERSION_NUMBER >= 0x10000000L
+
+int
+SSL_CTX_set1_param(ctx, vpm)
+     SSL_CTX *          ctx
+     X509_VERIFY_PARAM *vpm
+
+int
+SSL_set1_param(ctx, vpm)
+     SSL_CTX *          ctx
+     X509_VERIFY_PARAM *vpm
+
+#endif
+
+X509_VERIFY_PARAM *
+X509_VERIFY_PARAM_new()
+
+void 
+X509_VERIFY_PARAM_free(param)
+     X509_VERIFY_PARAM *param
+
+int
+X509_VERIFY_PARAM_inherit(to, from)
+     X509_VERIFY_PARAM *to
+     X509_VERIFY_PARAM *from
+
+int
+X509_VERIFY_PARAM_set1(to, from)
+     X509_VERIFY_PARAM *to
+     X509_VERIFY_PARAM *from
+
+int
+X509_VERIFY_PARAM_set1_name(param, name)
+     X509_VERIFY_PARAM *param
+     const char *name
+
+int 
+X509_VERIFY_PARAM_set_flags(param, flags)
+    X509_VERIFY_PARAM *param
+    unsigned long flags
+
+int 
+X509_VERIFY_PARAM_clear_flags(param, flags)
+    X509_VERIFY_PARAM *param
+    unsigned long flags
+
+unsigned long 
+X509_VERIFY_PARAM_get_flags(param)
+     X509_VERIFY_PARAM *param
+
+int 
+X509_VERIFY_PARAM_set_purpose(param, purpose)
+    X509_VERIFY_PARAM *param
+    int purpose
+
+int 
+X509_VERIFY_PARAM_set_trust(param, trust)
+    X509_VERIFY_PARAM *param
+    int trust
+
+void 
+X509_VERIFY_PARAM_set_depth(param, depth)
+    X509_VERIFY_PARAM *param
+    int depth
+
+void 
+X509_VERIFY_PARAM_set_time(param, t)
+    X509_VERIFY_PARAM *param
+    time_t t
+
+int 
+X509_VERIFY_PARAM_add0_policy(param, policy)
+    X509_VERIFY_PARAM *param
+    ASN1_OBJECT *policy
+
+int 
+X509_VERIFY_PARAM_set1_policies(param, policies)
+    X509_VERIFY_PARAM *param
+    STACK_OF(ASN1_OBJECT) *policies
+
+int 
+X509_VERIFY_PARAM_get_depth(param)
+    X509_VERIFY_PARAM *param
+
+int 
+X509_VERIFY_PARAM_add0_table(param)
+    X509_VERIFY_PARAM *param
+
+X509_VERIFY_PARAM *
+X509_VERIFY_PARAM_lookup(name)
+    const char *name
+
+void 
+X509_VERIFY_PARAM_table_cleanup()
+
+void 
+X509_policy_tree_free(tree)
+    X509_POLICY_TREE *tree
+
+int 
+X509_policy_tree_level_count(tree)
+    X509_POLICY_TREE *tree
+
+X509_POLICY_LEVEL *
+X509_policy_tree_get0_level(tree, i)
+    X509_POLICY_TREE *tree
+    int i
+
+STACK_OF(X509_POLICY_NODE) *
+X509_policy_tree_get0_policies(tree)
+    X509_POLICY_TREE *tree
+
+STACK_OF(X509_POLICY_NODE) *
+X509_policy_tree_get0_user_policies(tree)
+    X509_POLICY_TREE *tree
+
+int 
+X509_policy_level_node_count(level)
+    X509_POLICY_LEVEL *level
+
+X509_POLICY_NODE *
+X509_policy_level_get0_node(level, i)
+    X509_POLICY_LEVEL *level
+    int i
+
+ASN1_OBJECT *
+X509_policy_node_get0_policy(node)
+    X509_POLICY_NODE *node
+
+STACK_OF(POLICYQUALINFO) *
+X509_policy_node_get0_qualifiers(node)
+    X509_POLICY_NODE *node
+
+X509_POLICY_NODE *
+X509_policy_node_get0_parent(node)
+    X509_POLICY_NODE *node
+
+
+ASN1_OBJECT *	
+OBJ_dup(o)
+    ASN1_OBJECT *o
+
+ASN1_OBJECT *	
+OBJ_nid2obj(n)
+    int n
+
+const char *	
+OBJ_nid2ln(n)
+    int n
+
+const char *	
+OBJ_nid2sn(n)
+    int n
+
+int		
+OBJ_obj2nid(o)
+    ASN1_OBJECT *o
+
+ASN1_OBJECT *	
+OBJ_txt2obj(s, no_name)
+    const char *s
+    int no_name
+
+char *	
+OBJ_obj2txt(a, no_name)
+    ASN1_OBJECT *a
+    int no_name
+    PREINIT:
+	char buf[100];
+	int  len;
+    CODE:
+    len = OBJ_obj2txt(buf, sizeof(buf), a, no_name);
+    ST(0) = sv_newmortal();
+    sv_setpvn(ST(0), buf, len);
+
+int		
+OBJ_txt2nid(s)
+    const char *s
+
+int		
+OBJ_ln2nid(s)
+    const char *s
+
+int		
+OBJ_sn2nid(s)
+    const char *s
+
+int		
+OBJ_cmp(a, b)
+    ASN1_OBJECT *a
+    ASN1_OBJECT *b
+
 
 #define REM_EOF "/* EOF - SSLeay.xs */"
